# CoolListView

./: .gitignore  CMakeLists.txt  CoolListView.qml  Editor.qml  Main.qml  TestListModel.qml  coollistitem.cpp  coollistitem.h  coollistmodel.cpp  coollistmodel.h  dataloader.cpp  dataloader.h  generator.py  main.cpp
